Added: teaser > singleCard > image > borderWidth tokens (all brands)

--- a/tokens/component/teaser.json
+++ b/tokens/component/teaser.json
@@ -168,5 +168,13 @@
         }
       }
     }
+  },
+  "singleCard": {
+    "image": {
+      "border": {
+        "value": "{alias.brand.teaser.singleCard.image.border}",
+        "type": "borderWidth"
+      }
+    }
   }
 }
