Changed token name of 'Oneven' to 'Odd'

--- a/tokens/component/teaser.json
+++ b/tokens/component/teaser.json
@@ -203,8 +203,8 @@
         "value": "{alias.brand.teaser.categoryLabel.rotation.even}",
         "type": "number"
       },
-      "oneven": {
-        "value": "{alias.brand.teaser.categoryLabel.rotation.oneven}",
+      "odd": {
+        "value": "{alias.brand.teaser.categoryLabel.rotation.odd}",
         "type": "number"
       }
     }
