Added teaser image border radius tokens.

--- a/tokens/component/teaser.json
+++ b/tokens/component/teaser.json
@@ -208,5 +208,11 @@
         "type": "number"
       }
     }
+  },
+  "image": {
+    "borderRadius": {
+      "value": "{alias.brand.teaser.image.borderRadius}",
+      "type": "borderRadius"
+    }
   }
 }
